--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "http-status": "^1.5.3",
     "joi": "^17.7.0",
     "mongoose": "^6.6.3",
     "morgan": "^1.10.0",
